# rust_for_cybersecurity

./: .gitignore  .gitmodules  Cargo.toml  README.md
keylogger/: Cargo.toml
keylogger/src/: main.rs
leakdetector/: Cargo.toml  patterns.json
leakdetector/src/: github.rs  githubfile.rs  main.rs  patterns.rs  patters.rs  scanner.rs
scanner/: Cargo.toml
scanner/snippets/: errors.rs
scanner/src/: error.rs  main.rs  ports.rs  subdomains.rs
sha1_cracker/src/: main.rs
tcp_client/src/: main.rs
